--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -171,7 +171,7 @@
  STATE_169:0 "Andalusia"
  STATE_170:0 "Extremadura"
  STATE_171:0 "Galicia"
- STATE_172:0 "Navarre"
+ STATE_172:0 "Basque Country"
  STATE_173:0 "Granada"
  STATE_174:0 "Leon"
  STATE_175:0 "La Mancha"
